--- a/templates/basic.html
+++ b/templates/basic.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome To My Website</h1>
-    <h2>Here is a photo of puppy!</h2>
-    <img src="" alt=""/>
+    <h1>Hello, {{name}}</h1>
+    <h2>{{letters[2:]}}</h2>
+    <h2>{{pup_dict["pup_name"]}}</h2>
 </body>
 </html>
