--- a/templates/basic.html
+++ b/templates/basic.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>Hello, {{name}}</h1>
-    <h2>{{letters[2:]}}</h2>
-    <h2>{{pup_dict["pup_name"]}}</h2>
-</body>
+  </head>
+  <body>
+    <ul>
+        {% for dog in puppies %}
+            <li>{{dog}}</li>
+        {% endfor %}
+    </ul>
+    {% if  'Sparky' in puppies %}
+        <p>Found you, Sparky!</p>
+    {% else %}
+    <p>Hmm... Sparky is not in this list!</p>
+    {% endif %}
+  </body>
 </html>
