72. url_for helper function

--- a/templates/puppy.html
+++ b/templates/puppy.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
 {% block  content %}
 <h1>This is the page for {{name|capitalize}} </h1>
+{% comment %} <a href="{{url_for('static', filename='puppy_pic.jpg')}}"></a>{% endcomment %}
 {% endblock  %}
