--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Puppies Rock!</a>
+    <a class="navbar-brand" href="{{url_for('index')}}">Puppies Rock!</a>
   </nav>
   {% block content %}
   {% endblock %}
