75. Flask Template Exercise

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,6 @@
     }
 </style>
 <div class="jumbotron">
-  <p>Welcome to Puppy Rock!</p>
-  <p>Wanna sign up for our puppy band?</p>
-  <a href="{{url_for('signup_form')}}">Sign up for auditions here</a>
+  <a href="{{url_for('signup_form')}}">Sign up for usernames here</a>
 </div>
 {% endblock %}
