--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,17 +4,18 @@
 
 
 <h1>Welcome to the sign up page!</h1>
-<p>We're excited to have you audition for our band</p>
-<p>This will redirect to a thank you page.</p>
+<p>Let's see if your username is secure!</p>
 <p>
-  Please note, we're just puppies, so we haven't
-  learned how to save your information yet!
+  Fill out the form with a username that meets these restraints:
 </p>
+<ul>
+  <li>Must have an upper case letter somewhere</li>
+  <li>Must have an lower case letter somewhere</li>
+  <li>Must have a number at the end</li>
+</ul>
     <form action="{{url_for('thankyou')}}">
-       <label for="first">First Name</label>
-        <input type="text" name="first">
-        <label for="last">Last Name</label>
-        <input type="text" name="last">
+       <label for="username">username</label>
+        <input type="text" name="username">
         <input type="submit" value="Submit Form">
     </form>
 
