--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -1,7 +1,21 @@
 {% extends "base.html"%}
 {% block content %}
 <div class="jumbotron">
-
-  <h1>Thank you for signing up {{first}} {{last}}!</h1>
+  {% if meets_reqs %}
+  <h1>Thank you for signing up {{username}}! You met all the requirements!</h1>
+  {% else %}
+  <p>Oh no! You did not meet all the requirements!</p>
+  <ul>
+    {% if not lowercase_letter %}
+    <li>No lower case letter!</li>
+    {% endif %}
+    {% if not uppercase_letter %}
+    <li>No upper case letter!</li>
+    {% endif %}
+    {% if not ends_with_num %}
+    <li>Does not end with number!</li>
+    {% endif %}
+  </ul>
+  {% endif %}
 </div>
 {% endblock %}
