Add owner relations to HTML

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,7 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="{{ url_for('index') }}">Home</a>
         <a class="nav-item nav-link" href="{{ url_for('add_pup') }}">Add Pup</a>
+        <a class="nav-item nav-link" href="{{ url_for('add_owner') }}">Add Owner</a>
         <a class="nav-item nav-link" href="{{ url_for('list_puppies') }}"
           >List of Pups</a
         >
